# stellaris-performance-test

./: Cargo.toml  README.md  async 14k test.mkv  holder stuff.rs  resources.md
save files/: meta - mid  meta - start
src/: empire.rs  empire_optimization.rs  empire_optimization_returns.rs  empire_production.rs  main.rs
